change notebooks structures + add more base codes

--- a/notebooks/1_modeling_school_risk.ipynb
+++ b/notebooks/1_modeling_school_risk.ipynb
@@ -6,18 +6,55 @@
     "toc": true
    },
    "source": [
+    "<h1>Índice<span class=\"tocSkip\"></span></h1>\n",
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#EDA:-Evolution-of-Rio-de-Janeiro-(RJ)-schools-on-IDEB\" data-toc-modified-id=\"EDA:-Evolution-of-Rio-de-Janeiro-(RJ)-schools-on-IDEB-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>EDA: Evolution of Rio de Janeiro (RJ) schools on IDEB</a></span><ul class=\"toc-item\"><li><ul class=\"toc-item\"><li><span><a href=\"#Goals\" data-toc-modified-id=\"Goals-1.0.1\"><span class=\"toc-item-num\">1.0.1&nbsp;&nbsp;</span>Goals</a></span></li><li><span><a href=\"#Data-scources\" data-toc-modified-id=\"Data-scources-1.0.2\"><span class=\"toc-item-num\">1.0.2&nbsp;&nbsp;</span>Data scources</a></span></li><li><span><a href=\"#Methodology\" data-toc-modified-id=\"Methodology-1.0.3\"><span class=\"toc-item-num\">1.0.3&nbsp;&nbsp;</span>Methodology</a></span></li><li><span><a href=\"#Results\" data-toc-modified-id=\"Results-1.0.4\"><span class=\"toc-item-num\">1.0.4&nbsp;&nbsp;</span>Results</a></span><ul class=\"toc-item\"><li><span><a href=\"#Outputs\" data-toc-modified-id=\"Outputs-1.0.4.1\"><span class=\"toc-item-num\">1.0.4.1&nbsp;&nbsp;</span>Outputs</a></span></li></ul></li><li><span><a href=\"#Authors\" data-toc-modified-id=\"Authors-1.0.5\"><span class=\"toc-item-num\">1.0.5&nbsp;&nbsp;</span>Authors</a></span></li></ul></li><li><span><a href=\"#Import-data\" data-toc-modified-id=\"Import-data-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Import data</a></span><ul class=\"toc-item\"><li><span><a href=\"#IDEB-marks-distribution\" data-toc-modified-id=\"IDEB-marks-distribution-1.1.1\"><span class=\"toc-item-num\">1.1.1&nbsp;&nbsp;</span>IDEB marks distribution</a></span></li><li><span><a href=\"#IDEB-Growth\" data-toc-modified-id=\"IDEB-Growth-1.1.2\"><span class=\"toc-item-num\">1.1.2&nbsp;&nbsp;</span>IDEB Growth</a></span><ul class=\"toc-item\"><li><span><a href=\"#Identify-the-schools-with-most-IDEB-variation-from-2005-to-2017\" data-toc-modified-id=\"Identify-the-schools-with-most-IDEB-variation-from-2005-to-2017-1.1.2.1\"><span class=\"toc-item-num\">1.1.2.1&nbsp;&nbsp;</span>Identify the schools with most IDEB variation from 2005 to 2017</a></span></li><li><span><a href=\"#Identify-schools-that-jumped-from-low-/-very-low-IDEB-(&lt;5-/-&lt;4)-and-went-to-high-IDEB-(&gt;-6),-from-2005-to-2017.\" data-toc-modified-id=\"Identify-schools-that-jumped-from-low-/-very-low-IDEB-(<5-/-<4)-and-went-to-high-IDEB-(>-6),-from-2005-to-2017.-1.1.2.2\"><span class=\"toc-item-num\">1.1.2.2&nbsp;&nbsp;</span>Identify schools that jumped from low / very low IDEB (&lt;5 / &lt;4) and went to high IDEB (&gt; 6), from 2005 to 2017.</a></span></li></ul></li><li><span><a href=\"#Model-neighboors:-which-schools-had-a-large-delta-and-were-nearby-schools-on-the-highest-attention-level-(4)?\" data-toc-modified-id=\"Model-neighboors:-which-schools-had-a-large-delta-and-were-nearby-schools-on-the-highest-attention-level-(4)?-1.1.3\"><span class=\"toc-item-num\">1.1.3&nbsp;&nbsp;</span>Model neighboors: which schools had a large delta and were nearby schools on the highest attention level (4)?</a></span></li><li><span><a href=\"#See-if-the-education-census-contains-information-on-who-was-the-principal-of-each-school-each-year.\" data-toc-modified-id=\"See-if-the-education-census-contains-information-on-who-was-the-principal-of-each-school-each-year.-1.1.4\"><span class=\"toc-item-num\">1.1.4&nbsp;&nbsp;</span>See if the education census contains information on who was the principal of each school each year.</a></span></li></ul></li></ul></li></ul></div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EDA: Evolution of Rio de Janeiro (RJ) schools on IDEB\n",
     "---\n",
-    "\n",
     "### Goals\n",
+    "Examining the geolocated IDEB data frrom schools and modeling *risk* and *model* schools for the research.\n",
     "Combining the school's IDEB (SAEB + approval rate) marks with Rio de Janeiro's municipal shapefile, we hope to discover some local standards in school performance over the years. The time interval we will analyze is from 2011 until today.\n",
+    "\n",
+    "### Data scources\n",
+    "\n",
+    "- `ideb_merged.csv`: resulted data from the geolocalization, IDEB by years on columns \n",
+    "- `ideb_merged_kepler.csv`: resulted data from the geolocalization, format for kepler input\n",
+    "\n",
+    "### Methodology\n",
+    "\n",
+    "The goal is to determine the \"model\" schools in a certain ratio. We'll define those \"models\" as schools that had a great grown and stands nearby \"high risk\" schools, the ones in the lowest strata. For that, we construct the model below with suggestions by Ragazzo:\n",
+    "\n",
+    "We are interested in the following groups:\n",
+    " - Group 1: Schools from very low (< 4) to high (> 6)\n",
+    " - Group 2: Schools from low (4 < x < 5) to high (> 6)\n",
+    " - Group 3: Schools went to high (> 6) with delta > 2\n",
+    " \n",
+    "The *attention level* (or risk) of a school is defined by which quartile it belongs on IDEB 2017 distribution (most recent), from the lowest quartile (level 4) to the highest (level 1).\n",
     "\n",
     "### Results\n",
     "\n",
-    "- You can open the file `ideb_kepler.json` on [kepler.gl](https://kepler.gl) to see the interactive map, from 2005 to 2017! :)\n",
+    "1. [Identify the schools with most IDEB variation from 2005 to 2017](#1)\n",
+    "\n",
+    "2. [Identify schools that jumped from low / very low IDEB (<5 / <4) and went to high IDEB (> 6), from 2005 to 2017](#2)\n",
+    "\n",
+    "2. [Model neighboors: which schools had a large delta and were nearby schools on the highest attention level (4)?](#3)\n",
+    "\n",
+    "3. [See if the education census contains information on who was the principal of each school each year.](#4) - actually, we use an indicator of school's \"managment complexity\" with the IDEB data. We didn't find any difference between levels of \"managment complexity\" related to IDEB marks from those schools in each level.\n",
+    "\n",
+    "#### Outputs\n",
+    "\n",
+    "- `model_neighboors_closest_multiple.csv`: database with the risk schools and closest model schools\n",
+    "- `top_15_delta.csv`, `bottom_15_delta.csv`: top and bottom schools evolution from 2005 to 2017\n",
+    "- `kepler_with_filters.csv`: database for plot in kepler with schools categories (from the methology)\n",
+    "\n",
     "\n",
     "### Authors\n",
-    "*Original code by Guilherme Almeida [here](base_EDA_code.ipynb), adapted by [Fernanda Scovino](https://github.com/fernandascovino) - 2019.*"
+    "Original code by Guilherme Almeida here, adapted by Fernanda Scovino - 2019."
    ]
   },
   {
@@ -85,42 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TOC\n",
-    "\n",
-    "1. [Premisses](#)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Methodology\n",
-    "\n",
-    "The goal is to determine the \"model\" schools in a certain ratio. We'll define those \"models\" as schools that had a great grown and stands nearby \"high risk\" schools, the ones in the lowest strata. For that, we construct the model below with suggestions by Ragazzo:\n",
-    "\n",
-    "We are interested in the following groups:\n",
-    " - Group 1: Schools from very low (< 4) to high (> 6)\n",
-    " - Group 2: Schools from low (4 < x < 5) to high (> 6)\n",
-    " - Group 3: Schools went to high (> 6) with delta > 2\n",
-    " \n",
-    "The *attention level* (or risk) of a school is defined by which quartile it belongs on IDEB 2017 distribution (most recent), from the lowest quartile (level 4) to the highest (level 1).\n",
-    "\n",
-    "## Results\n",
-    "\n",
-    "1. [Identify the schools with most IDEB variation from 2005 to 2017](#1)\n",
-    "\n",
-    "2. [Identify schools that jumped from low / very low IDEB (<5 / <4) and went to high IDEB (> 6), from 2005 to 2017](#2)\n",
-    "\n",
-    "2. [Model neighboors: which schools had a large delta and were nearby schools on the highest attention level (4)?](#3)\n",
-    "\n",
-    "5. See if the education census contains information on who was the principal of each school each year."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Import data"
+    "## Import data"
    ]
   },
   {
@@ -516,8 +518,8 @@
    "metadata": {},
    "source": [
     "<a id=\"1\"></a>\n",
-    "## IDEB Growth \n",
-    "### Identify the schools with most IDEB variation from 2005 to 2017"
+    "### IDEB Growth \n",
+    "#### Identify the schools with most IDEB variation from 2005 to 2017"
    ]
   },
   {
@@ -1588,7 +1590,7 @@
    "metadata": {},
    "source": [
     "<a id='2'></a>\n",
-    "### Identify schools that jumped from low / very low IDEB (<5 / <4) and went to high IDEB (> 6), from 2005 to 2017.\n",
+    "#### Identify schools that jumped from low / very low IDEB (<5 / <4) and went to high IDEB (> 6), from 2005 to 2017.\n",
     "\n",
     "Our interest group are the following:\n",
     "\n",
